--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Hack the valley repository",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "babel-watch src/server.js"
   },
   "repository": {
     "type": "git",
