--- a/package.json
+++ b/package.json
@@ -18,11 +18,21 @@
   },
   "homepage": "https://github.com/CryogenicPlanet/HTV4#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
+    "express-rate-limiter": "^1.3.1",
+    "mongoose": "^5.9.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4"
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-watch": "^7.0.0"
   }
 }
